--- a/src/jackal/jackal_navigation_rtab/maps/empty_map.yaml
+++ b/src/jackal/jackal_navigation_rtab/maps/empty_map.yaml
@@ -1,7 +1,12 @@
-image: mymap.pgm
+free_thresh: 0.196
+image: crop.pgm
+negate: 0
+occupied_thresh: 0.65
+origin: [-40.175002, -40.125002, 0.0]
+resolution: 0.05
+image: empty_map.pgm
 resolution: 0.050000
-origin: [-40.525002, -40.525002, 0.000000]
+origin: [-40.850001, -40.875001, 0.000000]
 negate: 0
 occupied_thresh: 0.65
 free_thresh: 0.196
-
