--- a/src/jackal/jackal_navigation_rtab/params/costmap_common_params.yaml
+++ b/src/jackal/jackal_navigation_rtab/params/costmap_common_params.yaml
@@ -13,8 +13,8 @@ meter_scoring: true
 footprint: [[-0.21, -0.165], [-0.21, 0.165], [0.21, 0.165], [0.21, -0.165]]
 footprint_padding: 0.1
 
-observation_sources: scan
-scan: {sensor_frame: Velodyne, data_type: LaserScan, topic: front/scan, marking: true, clearing: true}
+# observation_sources: scan
+# scan: {sensor_frame: Velodyne, data_type: LaserScan, topic: front/scan, marking: true, clearing: true}
 
 # map_type: costmap
 # origin_z: 0.0
