add launch files for diff trials

--- a/src/jackal_simulator/jackal_gazebo_rtab/launch/base_link_calibration_60.yaml
+++ b/src/jackal_simulator/jackal_gazebo_rtab/launch/base_link_calibration_60.yaml
@@ -1,3 +1,4 @@
+TL
 rosservice call --wait /jackal1/set_pose "pose:
   header:
     seq: 0
@@ -7,7 +8,7 @@ rosservice call --wait /jackal1/set_pose "pose:
     frame_id: jackal1/base_link
   pose:
     pose:
-      position: {x: -14.5, y: -14.5, z: 0.0}
+      position: {x: -29.5, y: -29.5, z: 0.0}
       orientation: {x: 0.0, y: 0.0, z: 0.0, w: 1.0}
     covariance: [0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0,
       0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0,
@@ -23,7 +24,7 @@ rosservice call --wait /jackal2/set_pose "pose:
     frame_id: jackal2/base_link
   pose:
     pose:
-      position: {x: -14.5, y: -13.5, z: 0.0}
+      position: {x: -29.5, y: -28.5, z: 0.0}
       orientation: {x: 0.0, y: 0.0, z: 0.0, w: 1.0}
     covariance: [0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0,
       0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0,0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0]"
@@ -37,7 +38,7 @@ rosservice call --wait /jackal3/set_pose "pose:
     frame_id: jackal3/base_link
   pose:
     pose:
-      position: {x: -13.5, y: -14.5, z: 0.0}
+      position: {x: -28.5, y: -29.5, z: 0.0}
       orientation: {x: 0.0, y: 0.0, z: 0.0, w: 1.0}
     covariance: [0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0,
       0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0,
@@ -53,7 +54,7 @@ rosservice call --wait /jackal4/set_pose "pose:
     frame_id: jackal4/base_link
   pose:
     pose:
-      position: {x: -13.5, y: -13.5, z: 0.0}
+      position: {x: -28.5, y: -28.5, z: 0.0}
       orientation: {x: 0.0, y: 0.0, z: 0.0, w: 1.0}
     covariance: [0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0,
       0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0,0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0]"
@@ -67,7 +68,7 @@ rosservice call --wait /jackal5/set_pose "pose:
     frame_id: jackal5/base_link
   pose:
     pose:
-      position: {x: -14.5, y: -12.5, z: 0.0}
+      position: {x: -29.5, y: -27.5, z: 0.0}
       orientation: {x: 0.0, y: 0.0, z: 0.0, w: 1.0}
     covariance: [0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0,
       0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0,0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0]"
@@ -81,14 +82,17 @@ rosservice call --wait /jackal6/set_pose "pose:
     frame_id: jackal6/base_link
   pose:
     pose:
-      position: {x: -12.5, y: -14.5, z: 0.0}
+      position: {x: -27.5, y: -29.5, z: 0.0}
       orientation: {x: 0.0, y: 0.0, z: 0.0, w: 1.0}
     covariance: [0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0,
       0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0,0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0]"
+
+
+
+
 
 
 MID
-
 rosservice call --wait /jackal1/set_pose "pose:
   header:
     seq: 0
@@ -98,7 +102,7 @@ rosservice call --wait /jackal1/set_pose "pose:
     frame_id: jackal1/base_link
   pose:
     pose:
-      position: {x: -2.5, y: -6.5, z: 0.0}
+      position: {x: -10.5, y: 4.5, z: 0.0}
       orientation: {x: 0.0, y: 0.0, z: 0.0, w: 1.0}
     covariance: [0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0,
       0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0,
@@ -114,7 +118,7 @@ rosservice call --wait /jackal2/set_pose "pose:
     frame_id: jackal2/base_link
   pose:
     pose:
-      position: {x: -2.5, y: -7.5, z: 0.0}
+      position: {x: -10.5, y: 3.5, z: 0.0}
       orientation: {x: 0.0, y: 0.0, z: 0.0, w: 1.0}
     covariance: [0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0,
       0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0,0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0]"
@@ -128,7 +132,7 @@ rosservice call --wait /jackal3/set_pose "pose:
     frame_id: jackal3/base_link
   pose:
     pose:
-      position: {x: -2.5, y: -5.5, z: 0.0}
+      position: {x: -10.5, y: 5.5, z: 0.0}
       orientation: {x: 0.0, y: 0.0, z: 0.0, w: 1.0}
     covariance: [0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0,
       0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0,
@@ -144,7 +148,7 @@ rosservice call --wait /jackal4/set_pose "pose:
     frame_id: jackal4/base_link
   pose:
     pose:
-      position: {x: 3.5, y: 6.5, z: 0.0}
+      position: {x: 11.5, y: -4.5, z: 0.0}
       orientation: {x: 0.0, y: 0.0, z: 0.0, w: 1.0}
     covariance: [0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0,
       0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0,0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0]"
@@ -158,7 +162,7 @@ rosservice call --wait /jackal5/set_pose "pose:
     frame_id: jackal5/base_link
   pose:
     pose:
-      position: {x: 3.5, y: 7.5, z: 0.0}
+      position: {x: 11.5, y: -3.5, z: 0.0}
       orientation: {x: 0.0, y: 0.0, z: 0.0, w: 1.0}
     covariance: [0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0,
       0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0,0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0]"
@@ -172,7 +176,98 @@ rosservice call --wait /jackal6/set_pose "pose:
     frame_id: jackal6/base_link
   pose:
     pose:
-      position: {x: 3.5, y: 5.5, z: 0.0}
+      position: {x: 11.5, y: -5.5, z: 0.0}
       orientation: {x: 0.0, y: 0.0, z: 0.0, w: 1.0}
     covariance: [0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0,
       0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0,0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0]"
+
+
+BR
+rosservice call --wait /jackal1/set_pose "pose:
+  header:
+    seq: 0
+    stamp:
+      secs: 0
+      nsecs: 0
+    frame_id: jackal1/base_link
+  pose:
+    pose:
+      position: {x: -29.5, y: -29.5, z: 0.0}
+      orientation: {x: 0.0, y: 0.0, z: 0.0, w: 1.0}
+    covariance: [0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0,
+      0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0,
+      0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0]"
+
+
+rosservice call --wait /jackal2/set_pose "pose:
+  header:
+    seq: 0
+    stamp:
+      secs: 0
+      nsecs: 0
+    frame_id: jackal2/base_link
+  pose:
+    pose:
+      position: {x: -28.5, y: -29.5, z: 0.0}
+      orientation: {x: 0.0, y: 0.0, z: 0.0, w: 1.0}
+    covariance: [0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0,
+      0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0,0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0]"
+
+rosservice call --wait /jackal3/set_pose "pose:
+  header:
+    seq: 0
+    stamp:
+      secs: 0
+      nsecs: 0
+    frame_id: jackal3/base_link
+  pose:
+    pose:
+      position: {x: -29.5, y: -28.5, z: 0.0}
+      orientation: {x: 0.0, y: 0.0, z: 0.0, w: 1.0}
+    covariance: [0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0,
+      0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0,
+      0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0]"
+
+
+rosservice call --wait /jackal4/set_pose "pose:
+  header:
+    seq: 0
+    stamp:
+      secs: 0
+      nsecs: 0
+    frame_id: jackal4/base_link
+  pose:
+    pose:
+      position: {x: -28.5, y: -28.5, z: 0.0}
+      orientation: {x: 0.0, y: 0.0, z: 0.0, w: 1.0}
+    covariance: [0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0,
+      0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0,0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0]"
+
+rosservice call --wait /jackal5/set_pose "pose:
+  header:
+    seq: 0
+    stamp:
+      secs: 0
+      nsecs: 0
+    frame_id: jackal5/base_link
+  pose:
+    pose:
+      position: {x: -27.5, y: -29.5, z: 0.0}
+      orientation: {x: 0.0, y: 0.0, z: 0.0, w: 1.0}
+    covariance: [0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0,
+      0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0,0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0]"
+
+rosservice call --wait /jackal6/set_pose "pose:
+  header:
+    seq: 0
+    stamp:
+      secs: 0
+      nsecs: 0
+    frame_id: jackal6/base_link
+  pose:
+    pose:
+      position: {x: -29.5, y: -27.5, z: 0.0}
+      orientation: {x: 0.0, y: 0.0, z: 0.0, w: 1.0}
+    covariance: [0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0,
+      0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0,0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0]"
+
